[gd_scene load_steps=15 format=2]

[ext_resource path="res://other/fonts/solitreo_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/notes.gd" type="Script" id=2]
[ext_resource path="res://images/mainsprites/miscellaneous/sheet.png" type="Texture" id=3]
[ext_resource path="res://other/gui/select.png" type="Texture" id=4]
[ext_resource path="res://images/mainsprites/miscellaneous/particle.png" type="Texture" id=5]

[sub_resource type="Animation" id=14]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 737, 103 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Control:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 416, 500 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Control:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Control/RichTextLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Control:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 737, 103 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Control:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 416, 500 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Control/RichTextLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
resource_name = "Text"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Control/RichTextLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=12]
radius = 13.4825

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 25.0
content_margin_right = 25.0
content_margin_top = 25.0
content_margin_bottom = 25.0
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0.0127389, 0.152866, 0.528662, 0.828025, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 0.222656, 0.801868, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 1
emission_sphere_radius = 7.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
angular_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 0.5
orbit_velocity_random = 0.2
scale = 0.02
scale_random = 0.4
color_ramp = SubResource( 19 )

[node name="Notes" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="Select" type="Sprite" parent="."]
position = Vector2( 0, -21.3333 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )

[node name="Text" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 14 )
anims/RESET = SubResource( 10 )
anims/Text = SubResource( 11 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_left = 737.0
margin_top = 103.0
margin_right = 1153.0
margin_bottom = 603.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = -129.0
margin_top = 70.0
margin_right = 221.0
margin_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 350, 0 )
rect_clip_content = false
input_pass_on_modal_close_click = false
custom_fonts/normal_font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]Example[/center]
 carlos alberto"
text = "Example
 carlos alberto"
fit_content_height = true
scroll_active = false
scroll_following = true
deselect_on_focus_loss_enabled = false

[node name="Particles2D" type="Particles2D" parent="."]
amount = 25
process_material = SubResource( 17 )
texture = ExtResource( 5 )

[connection signal="animation_finished" from="Text" to="." method="_on_Text_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
